--- a/src/modules/dashboard/views/modals/create.ejs
+++ b/src/modules/dashboard/views/modals/create.ejs
@@ -13,9 +13,9 @@
         <input 
           type="text" 
           name="name" 
-          placeholder="e.g. Marketing Division" 
-          class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500" 
-          required 
+          placeholder="e.g. Tenant A" 
+          class="w-full bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:outline-none focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5" 
+          required
           autofocus
         >
       </div>
@@ -30,7 +30,7 @@
         </button>
         <button 
           type="submit" 
-          class="px-4 py-2 bg-blue-600 text-white font-bold rounded hover:bg-blue-700 transition flex items-center"
+          class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center transition"
         >
           Create Tenant
         </button>
